--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "babel": "^6.23.0",
     "dotenv": "^8.2.0",
     "needle": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-scripts": "4.0.3",
-    "react-tweet-embed": "^1.2.2",
+    "react-twitter-widgets": "^1.10.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +47,13 @@
     ]
   },
   "react-dotenv": {
-    "whitelist": ["API_URL"]
+    "whitelist": [
+      "BEARER_TOKEN"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/runtime": "^7.13.10"
   }
 }
